# Tempera

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CurrentEngine.cpp  CurrentEngine.h  LICENSE  LuaCpp.md  PrecompiledHeader.cmake  README.md  Tempera.def  build.bat  ce_base_types.h  ceinternal.h  forge.cpp  function_rewrite.cpp  function_rewrite.h  license.txt  main.cpp  main.h  precompile.cpp  version.h  version.rc
src/: CMakeLists.txt  CurrentEngine.cpp  CurrentEngine.h  RuntimeManager.cpp  RuntimeManager.h  ce_base_types.h  core.cpp  core.h  core_types.h  forge.cpp  forge.h  module.modulemap
src/Dinput/: dinput.cpp  dinput.h
src/Direct3D/: d3d9hook.cpp  d3d9hook.h  textures.h
src/ai/: CMakeLists.txt  ai.h  ai_communication.h  ai_scenario_definitions.h  ai_script.h  ai_structures.h  encounters.h  prop_structures.h
src/ai/actions/: action_alert.hpp  action_avoid.hpp  action_fight.hpp  action_flee.hpp  actions.hpp
src/ai/actors/: actor_definitions.h  actor_definitions.hpp  actor_looking.hpp  actor_moving.h  actor_perception.h  actor_structures.h  actor_types.hpp  actors.h  actors.hpp  tranform_manager.h  transform_manager.cpp  unit_transform_definitions.h
src/ai/ai_yelo/: AI.Transform.inl  AI.cpp  AI.hpp
src/bitmaps/: bitmap_group.h
src/cache/: CMakeLists.txt  cache_base.h  cache_enums.h  cache_files.h  cache_files_globals.h  cache_files_structures.h  cache_files_structures_yelo.h  data_file.h  data_file_structures.h
src/cseries/: CMakeLists.txt  MacrosCpp.h  base.h  cseries.h  enum_wrappers.hpp  errors.h  handle_abi.hpp  non_pod_container.hpp  random.cpp  random.h  value_conversion.hpp  yelo_base.h
src/effects/: CMakeLists.txt
src/engine/: CMakeLists.txt  engine_functions.cpp  engine_functions.h  game.h
src/exceptions/: CMakeLists.txt  exception_handler.cpp  exception_handler.h
src/game/: CMakeLists.txt  game_engine.h
src/game/networking/: client_manager_structures.h  game_globals.h
src/game/objects/: CMakeLists.txt  object_definitions.h  object_lights.h  objects.h  scenario_definitions_structures.h  scenario_definitions_structures.hpp
src/game/time/: CMakeLists.txt  time.hpp  time_structures.hpp
src/gamestate/: CMakeLists.txt  camera.cpp  camera.h  controls.cpp  controls.h  first_divisor.h  game_engine.cpp  game_engine.h  game_globals.h  game_types.h  module.modulemap  objectcontroller.cpp  objectcontroller.h  objects.cpp  objects.h  objects.h___jb_old___  player_types.h  players.cpp  players.h  runtime_data.cpp  runtime_data.hpp  unit_controls.h  unit_speech.h
src/gamestate/game_time/: gametime.cpp  gametime.h
src/gamestate/objects/: CMakeLists.txt  damage.cpp  damage.h  objectcontroller.cpp  objectcontroller.h  vehicle_remapper.h  weapons.h  yelo_objects.cpp  yelo_objects.h
src/gamestate/teams/: teams.h
src/gamestate/units/: CMakeLists.txt  definitions.h  extended_definitions.h  unit_controls.h  units.cpp  units.h
src/hs/: CMakeLists.txt  compile.h  function_declarations.h  function_definitions.cpp  function_definitions.h  game.h  globals_declarations.h  hs.cpp  hs.h  hs_value_union.h  library.h  module.modulemap  object_lists.cpp  object_lists.h  object_lists.hpp  object_lists_structures.h  object_lists_structures.hpp  objects.cpp  objects.h  runtime.h  runtime.hpp  runtime_structures.hpp  scenario.h  scenario.hpp  structures.h  structures.hpp  threads.cpp  threads.h  yelo_definitions.cpp  yelo_definitions.h
src/hs/script_extensions/: hs_base.h
src/hs/types/: compile.inl  runtime.inl  traits.h  traits.hpp  types.h
src/lua/: CMakeLists.txt  memory_interface.cpp  memory_interface.h  players_interface.h  script_manager.cpp  script_manager.h
src/math/: CMakeLists.txt  animations.h  colors.h  enums_generic.h  int_math.h  math.cpp  module.modulemap  real_math.h  weapons.h
src/memory/: CMakeLists.txt  array.h  array_yelo.hpp  bitstream.h  circular_queue.h  data.cpp  data.h  data_array.h  data_base.h  data_iterator.h  datum_index.h  files.hpp  linked_list.hpp  lruv_cache.h  memory_interface_base.hpp  memory_pool.h  memory_yelo.hpp  module.modulemap  naked_func_writer.h  packed_file.hpp  physical_memory_allocation.hpp  position_queue.h  profiling.h  queued_sigscanner.h  simple_circular_queue.h
src/memory/upgrades/: blam_memory_upgrades.hpp  game_state_yelo.hpp  gs_upgrades.inl
src/models/: CMakeLists.txt  bsp_definitions.h  bsp_definitions.hpp  collision_bsp.h
src/models/animations/: model_definitions.h  recorded_animation_definitions.h
src/render/: CMakeLists.txt  constants.h  render.cpp  render.h  render_constants_yelo.hpp  render_objects_upgrades.inl  render_particles_upgrades.inl
src/render/lightmaps/: c_lightmap_manager.cpp  c_lightmap_manager.hpp
src/render/lights/: lights.h
src/render/rasterizer/: CMakeLists.txt  GBuffer.cpp  GBuffer.hpp  Lightmaps.cpp  Lightmaps.hpp  Rasterizer.cpp  Rasterizer.hpp  RenderTargetChain.cpp  Sky.cpp  (+5 more)
src/scenario/: CMakeLists.txt  definitions.h  module.modulemap  scenario.h  scenario_enums.h  scenario_location.h  structure_bsp.h  structures.h
src/tags/: CMakeLists.txt  bsp.h  map.h  scenario.h  tag_enums.h  tags.h
src_generic/: CMakeLists.txt  ce_base_types.h  ceinternal.h  forge.cpp  function_rewrite.cpp  function_rewrite.h  players_loop_related.h
src_generic/Direct3D/: d3d9hook.cpp
src_generic/dinput/: dinput.h
src_generic/enums/: ControlTypes.h
src_generic/exceptions/: exception_handler.cpp  exception_handler.h
src_generic/extended/: addlog.cpp
src_generic/gamestate/: blam.cpp  camera.cpp  camera.h  controls.cpp  controls.h  core.cpp  core.h  forge.h  game_globals.h  game_input.h  hud_related.h  objectcontroller.cpp  objectcontroller.h  objects.h  player_controller_to_index_array.h  player_types.h  players.h  render.h  render_window.h  scenario.h
src_generic/headers/: colors.h  macros_generic.h
src_generic/interface/: CMakeLists.txt  interface.hpp
src_generic/lua/: gamestate_interface.h  lua_script_manager.h  memory_interface.cpp  memory_interface.h  players_interface.h  script_manager.cpp  script_manager.h
src_generic/tags/: map.h  tags.h
(+597 files in other folders)
