set(D3D
	src/Direct3D/d3d9hook.h
	src/Direct3D/textures.h
	)

set(DINPUT_H
	${CMAKE_CURRENT_SOURCE_DIR}/Dinput/dinput.h
	)

set(DINPUT_CXX
	${CMAKE_CURRENT_SOURCE_DIR}/Dinput/dinput.cpp
	)

add_subdirectory(ai)
add_subdirectory(math)
add_subdirectory(cache)
add_subdirectory(cseries)
add_subdirectory(effects)
add_subdirectory(exceptions)
add_subdirectory(game)
add_subdirectory(gamestate)
add_subdirectory(hs)
add_subdirectory(lua)
add_subdirectory(memory)
add_subdirectory(models)
add_subdirectory(render)
add_subdirectory(scenario)
add_subdirectory(tags)

set(SRC_CXX
	src/Direct3D/d3d9hook.cpp
	${AI_CXX}
	${DINPUT_CXX}
	${CMAKE_CURRENT_SOURCE_DIR}/core.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CurrentEngine.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/forge.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/math/math.cpp
	${SCRIPTING_SRC}
	${EXCEPTIONS_SRC}
	${LUA_SRC}
	${GAMESTATE_SRC}
	${SCENARIO_SRC}
	${GAME_SRC}
	${RENDER_SRC}
	${TAGS_CXX}
	PARENT_SCOPE)

set(SRC_H
	${GAME_H}
	${SCRIPTING_H}
	${SCENARIO_H}
	${CACHE_H}
	${CSERIES_H}
	${EFFECTS_H}
	${MATH_H}
	${MEMORY_H}
	${MODELS_H}
	${RENDER_H}
	${D3D}
	${DINPUT_H}
	${LUA_H}
	${CMAKE_CURRENT_SOURCE_DIR}/core_types.h
	${CMAKE_CURRENT_SOURCE_DIR}/core.h
	${CMAKE_CURRENT_SOURCE_DIR}/CurrentEngine.h
	${CMAKE_CURRENT_SOURCE_DIR}/forge.h
	${TAGS_H}
	${GAMESTATE_H}
	${EXCEPTIONS_H}
	PARENT_SCOPE)
